--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
-    <div class="container"></div>
+    <div id="container"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
